fix: hide text overflow in miniplayer

--- a/frontend/src/components/MiniPlayer.module.css
+++ b/frontend/src/components/MiniPlayer.module.css
@@ -86,7 +86,7 @@
   font-size: var(--font-size-base);
   color: var(--fg-primary);
   white-space: nowrap;
-  overflow:scroll;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
